--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,10 @@
 @font-face {font-family: "Semplicita";
-    src: url("http://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.eot"); /* IE9*/
-    src: url("http://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("http://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.woff2") format("woff2"), /* chrome firefox */
-    url("http://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.woff") format("woff"), /* chrome firefox */
-    url("http://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.ttf") format("truetype"), /* chrome firefox opera Safari, Android, iOS 4.2+*/
-    url("http://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.svg#Semplicita") format("svg"); /* iOS 4.1- */
+    src: url("https://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.eot"); /* IE9*/
+    src: url("https://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("https://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.woff2") format("woff2"), /* chrome firefox */
+    url("https://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.woff") format("woff"), /* chrome firefox */
+    url("https://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.ttf") format("truetype"), /* chrome firefox opera Safari, Android, iOS 4.2+*/
+    url("https://db.onlinewebfonts.com/t/81c243c84afda2f4f48b03f80476e2be.svg#Semplicita") format("svg"); /* iOS 4.1- */
 }
 
 
